# CBlake3_cli

./: Cargo.toml  README.md  build.rs
CBlake3_cli_32bit/: Cargo.toml
CBlake3_cli_32bit/.cargo/: config.toml
CBlake3_cli_32bit/src/: lib.rs
CBlake3_cli_32bit/src/additional/: MyHasherStruct.rs
CBlake3_cli_32bit/testprogram/: main.c  preklad.bat
CBlake3_cli_32bit/testprogram/headers/: mycrate.h
CBlake3_cli_64bit/: Cargo.toml  build.rs
CBlake3_cli_64bit/src/: lib.rs
CBlake3_cli_64bit/src/additional/: MyHasherStruct.rs
CBlake3_cli_64bit/testprogram/: preklad.bat
src/: additional.rs  build.rs  lib.rs
src/additional/: MyHasherStruct.rs
testprogram/: main.c  preklad.bat  test3.txt
testprogram/headers/: mycrate.h
