[package]
name = "rustblake"
version = "0.1.0"
edition = "2021"

# nezabudni pridat build.rs
build = "build.rs"

[build-dependencies]
cbindgen = "0.20.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustblake"
crate-type = ["cdylib"]

[dependencies]
blake3 = { version = "1.0.0", features = ["rayon"] } 
time = "*"
chrono = "0.4"
rayon = "1.5.1"
libc = "0.2"

